deploy/istio/generation-b-reference/40-gateway.yaml
# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: deploy/istio/generation-b-reference/40-gateway.yaml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: astradesk-gw
  namespace: astradesk
spec:
  selector:
    istio: ingressgateway  # Targets default Istio IngressGateway in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE  # TLS for external clients
        credentialName: astradesk-tls  # Secret managed by cert-manager
        minProtocolVersion: TLSV1_2  # Enforce minimum TLS version
      hosts:
        - api.astradesk.example.com  # Change to your production FQDN
