deploy/istio/generation-b-reference/41-virtualservice-astradesk-api.yaml
# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: deploy/istio/generation-b-reference/41-virtualservice-astradesk-api.yaml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: astradesk-api
  namespace: astradesk
spec:
  hosts:
    - api.astradesk.example.com  # Change to your production FQDN
  gateways:
    - astradesk-gw  # References Gateway in astradesk namespace
  http:
    - match:
        - uri:
            prefix: /  # Routes all HTTP(S) traffic to backend
      route:
        - destination:
            host: astradesk-api.astradesk.svc.cluster.local
            port:
              number: 8080  # Matches API container port
          weight: 100  # Full traffic to this destination
